<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_user"
    android:layout_margin="8dp"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_ic"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_margin="8dp"
        android:src="@drawable/sabrina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:text="@string/first_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/user_ic"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/last_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="9dp"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/first_name_tv"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/email_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/user_ic"
        app:layout_constraintTop_toBottomOf="@id/first_name_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>